Fix Portfolio img padding on mobile devices

--- a/assets/css/queries.css
+++ b/assets/css/queries.css
@@ -134,7 +134,7 @@
     .box img {
         display: block;
         width: 80%;
-        margin-left: -10px;
+        margin-left: -8px;
     }
     
     /* Fix About Me padding and font-sizes */
