--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -329,7 +329,7 @@ button:active {
 .box img {
     display: block;
     width: 80%;
-    margin-left: -8px;
+    margin-left: -10px;
 }
 #balh {
     margin-bottom: 0px;
